# vita

./: .gitmodules  CMakeLists.txt  readme.md  workbench.build.jsonc
examples/: CMakeLists.txt  main.cc  sample_01.cc  sample_02.cc  sample_03.cc  sample_04.cc  sample_05.cc  sample_06.cc  sample_07.cc
src/: CMakeLists.txt
src/anim/: anim.cc  anim.h  assert.cc  dependency_glad.h  dependency_sdl.cc  main.test.cc  opengl_utils.cc  pch.private.h  result.cc  str.cc
src/vita/: assert.cc  assets.cc  assets.h  dependency_glad.h  dependency_sdl.cc  im_colors.h  main.test.cc  opengl_utils.cc  opengl_utils.h  pch.private.h  pch.public.h  result.cc  str.cc  vita.cc  vita.h
src/vita/anim/: attribute.cc  attribute.h  clip.cc  clip.h  debugdraw.cc  debugdraw.h  draw.cc  draw.h  frame.h  gltfloader.cc  gltfloader.h  ik.cc  ik.h  ikleg.cc  ikleg.h  indexbuffer.cc  indexbuffer.h  interpolation.h  intersections.cc  intersections.h  mat4.cc  mat4.h  mat4.test.cc  mesh.cc  mesh.h  pose.cc  pose.h  quat.cc  quat.h  shader.cc  shader.h  skeleton.cc  skeleton.h  solver.ccd.cc  solver.ccd.h  solver.fabrik.cc  solver.fabrik.h  texture.cc  texture.h  track.cc  (+12 more)
